src/frontend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    DOT
    KEYWORD_CONTINUE
    SYSTEM_EXIT

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     function_definition -> type_specifier IDENTIFIER LPAREN params RPAREN block_statement
Rule 3     params -> param_list
Rule 4     params -> empty
Rule 5     param_list -> param
Rule 6     param_list -> param_list COMMA param
Rule 7     param -> type_specifier IDENTIFIER
Rule 8     statement_list -> statement
Rule 9     statement_list -> statement_list statement
Rule 10    statement -> declaration_statement
Rule 11    statement -> assignment_statement
Rule 12    statement -> if_statement
Rule 13    statement -> while_statement
Rule 14    statement -> do_while_statement
Rule 15    statement -> for_statement
Rule 16    statement -> switch_statement
Rule 17    statement -> break_statement
Rule 18    statement -> return_statement
Rule 19    statement -> function_call_statement
Rule 20    statement -> block_statement
Rule 21    statement -> function_definition
Rule 22    do_while_statement -> KEYWORD_DO statement KEYWORD_WHILE LPAREN expression RPAREN SEMICOLON
Rule 23    switch_statement -> KEYWORD_SWITCH LPAREN expression RPAREN LBRACE case_list RBRACE
Rule 24    case_list -> case_clause
Rule 25    case_list -> case_list case_clause
Rule 26    case_clause -> KEYWORD_CASE expression COLON statement_list
Rule 27    case_clause -> KEYWORD_DEFAULT COLON statement_list
Rule 28    break_statement -> KEYWORD_BREAK SEMICOLON
Rule 29    declaration_statement -> type_specifier IDENTIFIER SEMICOLON
Rule 30    declaration_statement -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON
Rule 31    declaration_statement -> type_specifier IDENTIFIER LBRACKET expression RBRACKET SEMICOLON
Rule 32    declaration_statement -> type_specifier IDENTIFIER LBRACKET expression RBRACKET ASSIGN initializer_list SEMICOLON
Rule 33    declaration_statement -> type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN initializer_list SEMICOLON
Rule 34    declaration_statement -> type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN expression SEMICOLON
Rule 35    declaration_statement -> type_specifier IDENTIFIER LBRACKET RBRACKET SEMICOLON
Rule 36    type_specifier -> primitive_type
Rule 37    type_specifier -> array_type
Rule 38    primitive_type -> KEYWORD_INT
Rule 39    primitive_type -> KEYWORD_FLOAT
Rule 40    primitive_type -> KEYWORD_CHAR
Rule 41    primitive_type -> KEYWORD_VOID
Rule 42    primitive_type -> KEYWORD_STRING
Rule 43    primitive_type -> KEYWORD_BOOL
Rule 44    primitive_type -> KEYWORD_FILE
Rule 45    primitive_type -> KEYWORD_SOCKET
Rule 46    primitive_type -> KEYWORD_DICT
Rule 47    primitive_type -> KEYWORD_REGEX
Rule 48    primitive_type -> KEYWORD_ARRAY
Rule 49    array_type -> primitive_type LBRACKET RBRACKET
Rule 50    assignment_statement -> left_hand_side ASSIGN expression SEMICOLON
Rule 51    left_hand_side -> IDENTIFIER
Rule 52    left_hand_side -> subscript_access
Rule 53    assignment_statement_no_semi -> left_hand_side ASSIGN expression
Rule 54    if_statement -> KEYWORD_IF LPAREN expression RPAREN statement
Rule 55    if_statement -> KEYWORD_IF LPAREN expression RPAREN statement KEYWORD_ELSE statement
Rule 56    while_statement -> KEYWORD_WHILE LPAREN expression RPAREN statement
Rule 57    for_statement -> KEYWORD_FOR LPAREN for_init expression_opt SEMICOLON expression_opt RPAREN statement
Rule 58    for_init -> assignment_statement_no_semi SEMICOLON
Rule 59    for_init -> declaration_statement
Rule 60    for_init -> SEMICOLON
Rule 61    expression_statement -> expression SEMICOLON
Rule 62    expression_statement -> SEMICOLON
Rule 63    expression_opt -> expression
Rule 64    expression_opt -> assignment_statement_no_semi
Rule 65    expression_opt -> empty
Rule 66    empty -> <empty>
Rule 67    return_statement -> KEYWORD_RETURN SEMICOLON
Rule 68    return_statement -> KEYWORD_RETURN expression SEMICOLON
Rule 69    function_call_statement -> function_call SEMICOLON
Rule 70    function_call -> IDENTIFIER LPAREN argument_list RPAREN
Rule 71    function_call -> IDENTIFIER LPAREN RPAREN
Rule 72    function_call -> SYSTEM_INPUT LPAREN IDENTIFIER COMMA type_specifier RPAREN
Rule 73    function_call -> SYSTEM_OUTPUT LPAREN expression COMMA type_specifier RPAREN
Rule 74    function_call -> SYSTEM_OUTPUT LPAREN expression COMMA type_specifier COMMA expression RPAREN
Rule 75    function_call -> KEYWORD_EXIT LPAREN RPAREN
Rule 76    function_call -> SYSTEM_SLEEP LPAREN expression RPAREN
Rule 77    function_call -> SYSTEM_ARR_PUSH LPAREN expression COMMA expression RPAREN
Rule 78    function_call -> SYSTEM_ARR_POP LPAREN expression RPAREN
Rule 79    function_call -> SYSTEM_ARR_SIZE LPAREN expression RPAREN
Rule 80    function_call -> SYSTEM_ARR_CONTAINS LPAREN expression COMMA expression RPAREN
Rule 81    function_call -> SYSTEM_ARR_INDEXOF LPAREN expression COMMA expression RPAREN
Rule 82    function_call -> SYSTEM_ARR_AVG LPAREN expression RPAREN
Rule 83    function_call -> SYSTEM_ARR_AVG LPAREN expression COMMA expression RPAREN
Rule 84    argument_list -> expression
Rule 85    argument_list -> argument_list COMMA expression
Rule 86    block_statement -> LBRACE RBRACE
Rule 87    block_statement -> LBRACE statement_list RBRACE
Rule 88    initializer_list -> LBRACKET expression_list_opt RBRACKET
Rule 89    expression_list_opt -> expression_list
Rule 90    expression_list_opt -> empty
Rule 91    expression_list -> expression
Rule 92    expression_list -> expression_list COMMA expression
Rule 93    expression -> logical_expression
Rule 94    expression -> initializer_list
Rule 95    logical_expression -> equality_expression
Rule 96    logical_expression -> logical_expression AND equality_expression
Rule 97    logical_expression -> logical_expression OR equality_expression
Rule 98    equality_expression -> relational_expression
Rule 99    equality_expression -> equality_expression EQ relational_expression
Rule 100   equality_expression -> equality_expression NEQ relational_expression
Rule 101   relational_expression -> additive_expression
Rule 102   relational_expression -> relational_expression GT additive_expression
Rule 103   relational_expression -> relational_expression LT additive_expression
Rule 104   relational_expression -> relational_expression GEQ additive_expression
Rule 105   relational_expression -> relational_expression LEQ additive_expression
Rule 106   additive_expression -> multiplicative_expression
Rule 107   additive_expression -> additive_expression PLUS multiplicative_expression
Rule 108   additive_expression -> additive_expression MINUS multiplicative_expression
Rule 109   multiplicative_expression -> unary_expression
Rule 110   multiplicative_expression -> multiplicative_expression MUL unary_expression
Rule 111   multiplicative_expression -> multiplicative_expression DIV unary_expression
Rule 112   multiplicative_expression -> multiplicative_expression MOD unary_expression
Rule 113   unary_expression -> primary_expression
Rule 114   unary_expression -> MINUS unary_expression
Rule 115   primary_expression -> IDENTIFIER
Rule 116   primary_expression -> INT_LITERAL
Rule 117   primary_expression -> FLOAT_LITERAL
Rule 118   primary_expression -> STRING_LITERAL
Rule 119   primary_expression -> CHAR_LITERAL
Rule 120   primary_expression -> KEYWORD_TRUE
Rule 121   primary_expression -> KEYWORD_FALSE
Rule 122   primary_expression -> KEYWORD_NULL
Rule 123   primary_expression -> LPAREN expression RPAREN
Rule 124   primary_expression -> function_call
Rule 125   primary_expression -> subscript_access
Rule 126   primary_expression -> dictionary_literal
Rule 127   dictionary_literal -> LBRACE key_value_list_opt RBRACE
Rule 128   key_value_list_opt -> key_value_list
Rule 129   key_value_list_opt -> empty
Rule 130   key_value_list -> key_value
Rule 131   key_value_list -> key_value_list COMMA key_value
Rule 132   key_value -> expression COLON expression
Rule 133   subscript_access -> IDENTIFIER LBRACKET expression RBRACKET

Terminals, with rules where they appear

AND                  : 96
ASSIGN               : 30 32 33 34 50 53
CHAR_LITERAL         : 119
COLON                : 26 27 132
COMMA                : 6 72 73 74 74 77 80 81 83 85 92 131
COMMENT              : 
DIV                  : 111
DOT                  : 
EQ                   : 99
FLOAT_LITERAL        : 117
GEQ                  : 104
GT                   : 102
IDENTIFIER           : 2 7 29 30 31 32 33 34 35 51 70 71 72 115 133
INT_LITERAL          : 116
KEYWORD_ARRAY        : 48
KEYWORD_BOOL         : 43
KEYWORD_BREAK        : 28
KEYWORD_CASE         : 26
KEYWORD_CHAR         : 40
KEYWORD_CONTINUE     : 
KEYWORD_DEFAULT      : 27
KEYWORD_DICT         : 46
KEYWORD_DO           : 22
KEYWORD_ELSE         : 55
KEYWORD_EXIT         : 75
KEYWORD_FALSE        : 121
KEYWORD_FILE         : 44
KEYWORD_FLOAT        : 39
KEYWORD_FOR          : 57
KEYWORD_IF           : 54 55
KEYWORD_INT          : 38
KEYWORD_NULL         : 122
KEYWORD_REGEX        : 47
KEYWORD_RETURN       : 67 68
KEYWORD_SOCKET       : 45
KEYWORD_STRING       : 42
KEYWORD_SWITCH       : 23
KEYWORD_TRUE         : 120
KEYWORD_VOID         : 41
KEYWORD_WHILE        : 22 56
LBRACE               : 23 86 87 127
LBRACKET             : 31 32 33 34 35 49 88 133
LEQ                  : 105
LPAREN               : 2 22 23 54 55 56 57 70 71 72 73 74 75 76 77 78 79 80 81 82 83 123
LT                   : 103
MINUS                : 108 114
MOD                  : 112
MUL                  : 110
NEQ                  : 100
OR                   : 97
PLUS                 : 107
RBRACE               : 23 86 87 127
RBRACKET             : 31 32 33 34 35 49 88 133
RPAREN               : 2 22 23 54 55 56 57 70 71 72 73 74 75 76 77 78 79 80 81 82 83 123
SEMICOLON            : 22 28 29 30 31 32 33 34 35 50 57 58 60 61 62 67 68 69
STRING_LITERAL       : 118
SYSTEM_ARR_AVG       : 82 83
SYSTEM_ARR_CONTAINS  : 80
SYSTEM_ARR_INDEXOF   : 81
SYSTEM_ARR_POP       : 78
SYSTEM_ARR_PUSH      : 77
SYSTEM_ARR_SIZE      : 79
SYSTEM_EXIT          : 
SYSTEM_INPUT         : 72
SYSTEM_OUTPUT        : 73 74
SYSTEM_SLEEP         : 76
error                : 

Nonterminals, with rules where they appear

additive_expression  : 101 102 103 104 105 107 108
argument_list        : 70 85
array_type           : 37
assignment_statement : 11
assignment_statement_no_semi : 58 64
block_statement      : 2 20
break_statement      : 17
case_clause          : 24 25
case_list            : 23 25
declaration_statement : 10 59
dictionary_literal   : 126
do_while_statement   : 14
empty                : 4 65 90 129
equality_expression  : 95 96 97 99 100
expression           : 22 23 26 30 31 32 34 50 53 54 55 56 61 63 68 73 74 74 76 77 77 78 79 80 80 81 81 82 83 83 84 85 91 92 123 132 132 133
expression_list      : 89 92
expression_list_opt  : 88
expression_opt       : 57 57
expression_statement : 
for_init             : 57
for_statement        : 15
function_call        : 69 124
function_call_statement : 19
function_definition  : 21
if_statement         : 12
initializer_list     : 32 33 94
key_value            : 130 131
key_value_list       : 128 131
key_value_list_opt   : 127
left_hand_side       : 50 53
logical_expression   : 93 96 97
multiplicative_expression : 106 107 108 110 111 112
param                : 5 6
param_list           : 3 6
params               : 2
primary_expression   : 113
primitive_type       : 36 49
program              : 0
relational_expression : 98 99 100 102 103 104 105
return_statement     : 18
statement            : 8 9 22 54 55 55 56 57
statement_list       : 1 9 26 27 87
subscript_access     : 52 125
switch_statement     : 16
type_specifier       : 2 7 29 30 31 32 33 34 35 72 73 74
unary_expression     : 109 110 111 112 114
while_statement      : 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (8) statement_list -> . statement
    (9) statement_list -> . statement_list statement
    (10) statement -> . declaration_statement
    (11) statement -> . assignment_statement
    (12) statement -> . if_statement
    (13) statement -> . while_statement
    (14) statement -> . do_while_statement
    (15) statement -> . for_statement
    (16) statement -> . switch_statement
    (17) statement -> . break_statement
    (18) statement -> . return_statement
    (19) statement -> . function_call_statement
    (20) statement -> . block_statement
    (21) statement -> . function_definition
    (29) declaration_statement -> . type_specifier IDENTIFIER SEMICOLON
    (30) declaration_statement -> . type_specifier IDENTIFIER ASSIGN expression SEMICOLON
    (31) declaration_statement -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET SEMICOLON
    (32) declaration_statement -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET ASSIGN initializer_list SEMICOLON
    (33) declaration_statement -> . type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN initializer_list SEMICOLON
    (34) declaration_statement -> . type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN expression SEMICOLON
    (35) declaration_statement -> . type_specifier IDENTIFIER LBRACKET RBRACKET SEMICOLON
    (50) assignment_statement -> . left_hand_side ASSIGN expression SEMICOLON
    (54) if_statement -> . KEYWORD_IF LPAREN expression RPAREN statement
    (55) if_statement -> . KEYWORD_IF LPAREN expression RPAREN statement KEYWORD_ELSE statement
    (56) while_statement -> . KEYWORD_WHILE LPAREN expression RPAREN statement
    (22) do_while_statement -> . KEYWORD_DO statement KEYWORD_WHILE LPAREN expression RPAREN SEMICOLON
    (57) for_statement -> . KEYWORD_FOR LPAREN for_init expression_opt SEMICOLON expression_opt RPAREN statement
    (23) switch_statement -> . KEYWORD_SWITCH LPAREN expression RPAREN LBRACE case_list RBRACE
    (28) break_statement -> . KEYWORD_BREAK SEMICOLON
    (67) return_statement -> . KEYWORD_RETURN SEMICOLON
    (68) return_statement -> . KEYWORD_RETURN expression SEMICOLON
    (69) function_call_statement -> . function_call SEMICOLON
    (86) block_statement -> . LBRACE RBRACE
    (87) block_statement -> . LBRACE statement_list RBRACE
    (2) function_definition -> . type_specifier IDENTIFIER LPAREN params RPAREN block_statement
    (36) type_specifier -> . primitive_type
    (37) type_specifier -> . array_type
    (51) left_hand_side -> . IDENTIFIER
    (52) left_hand_side -> . subscript_access
    (70) function_call -> . IDENTIFIER LPAREN argument_list RPAREN
    (71) function_call -> . IDENTIFIER LPAREN RPAREN
    (72) function_call -> . SYSTEM_INPUT LPAREN IDENTIFIER COMMA type_specifier RPAREN
    (73) function_call -> . SYSTEM_OUTPUT LPAREN expression COMMA type_specifier RPAREN
    (74) function_call -> . SYSTEM_OUTPUT LPAREN expression COMMA type_specifier COMMA expression RPAREN
    (75) function_call -> . KEYWORD_EXIT LPAREN RPAREN
    (76) function_call -> . SYSTEM_SLEEP LPAREN expression RPAREN
    (77) function_call -> . SYSTEM_ARR_PUSH LPAREN expression COMMA expression RPAREN
    (78) function_call -> . SYSTEM_ARR_POP LPAREN expression RPAREN
    (79) function_call -> . SYSTEM_ARR_SIZE LPAREN expression RPAREN
    (80) function_call -> . SYSTEM_ARR_CONTAINS LPAREN expression COMMA expression RPAREN
    (81) function_call -> . SYSTEM_ARR_INDEXOF LPAREN expression COMMA expression RPAREN
    (82) function_call -> . SYSTEM_ARR_AVG LPAREN expression RPAREN
    (83) function_call -> . SYSTEM_ARR_AVG LPAREN expression COMMA expression RPAREN
    (38) primitive_type -> . KEYWORD_INT
    (39) primitive_type -> . KEYWORD_FLOAT
    (40) primitive_type -> . KEYWORD_CHAR
    (41) primitive_type -> . KEYWORD_VOID
    (42) primitive_type -> . KEYWORD_STRING
    (43) primitive_type -> . KEYWORD_BOOL
    (44) primitive_type -> . KEYWORD_FILE
    (45) primitive_type -> . KEYWORD_SOCKET
    (46) primitive_type -> . KEYWORD_DICT
    (47) primitive_type -> . KEYWORD_REGEX
    (48) primitive_type -> . KEYWORD_ARRAY
    (49) array_type -> . primitive_type LBRACKET RBRACKET
    (133) subscript_access -> . IDENTIFIER LBRACKET expression RBRACKET

    KEYWORD_IF      shift and go to state 19
    KEYWORD_WHILE   shift and go to state 20
    KEYWORD_DO      shift and go to state 21
    KEYWORD_FOR     shift and go to state 22
    KEYWORD_SWITCH  shift and go to state 23
    KEYWORD_BREAK   shift and go to state 25
    KEYWORD_RETURN  shift and go to state 26
    LBRACE          shift and go to state 24
    IDENTIFIER      shift and go to state 17
    SYSTEM_INPUT    shift and go to state 31
    SYSTEM_OUTPUT   shift and go to state 32
    KEYWORD_EXIT    shift and go to state 33
    SYSTEM_SLEEP    shift and go to state 34
    SYSTEM_ARR_PUSH shift and go to state 35
    SYSTEM_ARR_POP  shift and go to state 36
    SYSTEM_ARR_SIZE shift and go to state 37
    SYSTEM_ARR_CONTAINS shift and go to state 38
    SYSTEM_ARR_INDEXOF shift and go to state 39
    SYSTEM_ARR_AVG  shift and go to state 40
    KEYWORD_INT     shift and go to state 41
    KEYWORD_FLOAT   shift and go to state 42
    KEYWORD_CHAR    shift and go to state 43
    KEYWORD_VOID    shift and go to state 44
    KEYWORD_STRING  shift and go to state 45
    KEYWORD_BOOL    shift and go to state 46
    KEYWORD_FILE    shift and go to state 47
    KEYWORD_SOCKET  shift and go to state 48
    KEYWORD_DICT    shift and go to state 49
    KEYWORD_REGEX   shift and go to state 50
    KEYWORD_ARRAY   shift and go to state 51

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    declaration_statement          shift and go to state 4
    assignment_statement           shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    do_while_statement             shift and go to state 8
    for_statement                  shift and go to state 9
    switch_statement               shift and go to state 10
    break_statement                shift and go to state 11
    return_statement               shift and go to state 12
    function_call_statement        shift and go to state 13
    block_statement                shift and go to state 14
    function_definition            shift and go to state 15
    type_specifier                 shift and go to state 16
    left_hand_side                 shift and go to state 18
    function_call                  shift and go to state 27
    primitive_type                 shift and go to state 28
    array_type                     shift and go to state 29
    subscript_access               shift and go to state 30

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (9) statement_list -> statement_list . statement
    (10) statement -> . declaration_statement
    (11) statement -> . assignment_statement
    (12) statement -> . if_statement
    (13) statement -> . while_statement
    (14) statement -> . do_while_statement
    (15) statement -> . for_statement
    (16) statement -> . switch_statement
    (17) statement -> . break_statement
    (18) statement -> . return_statement
    (19) statement -> . function_call_statement
    (20) statement -> . block_statement
    (21) statement -> . function_definition
    (29) declaration_statement -> . type_specifier IDENTIFIER SEMICOLON
    (30) declaration_statement -> . type_specifier IDENTIFIER ASSIGN expression SEMICOLON
    (31) declaration_statement -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET SEMICOLON
    (32) declaration_statement -> . type_specifier IDENTIFIER LBRACKET expression RBRACKET ASSIGN initializer_list SEMICOLON
    (33) declaration_statement -> . type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN initializer_list SEMICOLON
    (34) declaration_statement -> . type_specifier IDENTIFIER LBRACKET RBRACKET ASSIGN expression SEMICOLON
    (35) declaration_statement -> . type_specifier IDENTIFIER LBRACKET RBRACKET SEMICOLON
    (50) assignment_statement -> . left_hand_side ASSIGN expression SEMICOLON
    (54) if_statement -> . KEYWORD_IF LPAREN expression RPAREN statement
    (55) if_statement -> . KEYWORD_IF LPAREN expression RPAREN statement KEYWORD_ELSE statement
    (56) while_statement -> . KEYWORD_WHILE LPAREN expression RPAREN statement
    (22) do_while_statement -> . KEYWORD_DO statement KEYWORD_WHILE LPAREN expression RPAREN SEMICOLON
    (57) for_statement -> . KEYWORD_FOR LPAREN for_init expression_opt SEMICOLON expression_opt RPAREN statement
    (23) switch_statement -> . KEYWORD_SWITCH LPAREN expression RPAREN LBRACE case_list RBRACE
    (28) break_statement -> . KEYWORD_BREAK SEMICOLON
    (67) return_statement -> . KEYWORD_RETURN SEMICOLON
    (68) return_statement -> . KEYWORD_RETURN expression SEMICOLON
    (69) function_call_statement -> . function_call SEMICOLON
    (86) block_statement -> . LBRACE RBRACE
    (87) block_statement -> . LBRACE statement_list RBRACE
    (2) function_definition -> . type_specifier IDENTIFIER LPAREN params RPAREN block_statement
    (36) type_specifier -> . primitive_type
    (37) type_specifier -> . array_type
    (51) left_hand_side -> . IDENTIFIER
    (52) left_hand_side -> . subscript_access
    (70) function_call -> . IDENTIFIER LPAREN argument_list RPAREN
    (71) function_call -> . IDENTIFIER LPAREN RPAREN
    (72) function_call -> . SYSTEM_INPUT LPAREN IDENTIFIER COMMA type_specifier RPAREN
    (73) function_call -> . SYSTEM_OUTPUT LPAREN expression COMMA type_specifier RPAREN
    (74) function_call -> . SYSTEM_OUTPUT LPAREN expression COMMA type_specifier COMMA expression RPAREN
    (75) function_call -> . KEYWORD_EXIT LPAREN RPAREN
    (76) function_call -> . SYSTEM_SLEEP LPAREN expression RPAREN
    (77) function_call -> . SYSTEM_ARR_PUSH LPAREN expression COMMA expression RPAREN
    (78) function_call -> . SYSTEM_ARR_POP LPAREN expression RPAREN
    (79) function_call -> . SYSTEM_ARR_SIZE LPAREN expression RPAREN
    (80) function_call -> . SYSTEM_ARR_CONTAINS LPAREN expression COMMA expression RPAREN
    (81) function_call -> . SYSTEM_ARR_INDEXOF LPAREN expression COMMA expression RPAREN
    (82) function_call -> . SYSTEM_ARR_AVG LPAREN expression RPAREN
    (83) function_call -> . SYSTEM_ARR_AVG LPAREN expression COMMA expression RPAREN
    (38) primitive_type -> . KEYWORD_INT
    (39) primitive_type -> . KEYWORD_FLOAT
    (40) primitive_type -> . KEYWORD_CHAR
    (41) primitive_type -> . KEYWORD_VOID
    (42) primitive_type -> . KEYWORD_STRING
    (43) primitive_type -> . KEYWORD_BOOL
    (44) primitive_type -> . KEYWORD_FILE
    (45) primitive_type -> . KEYWORD_SOCKET
    (46) primitive_type -> . KEYWORD_DICT
    (47) primitive_type -> . KEYWORD_REGEX
    (48) primitive_type -> . KEYWORD_ARRAY
    (49) array_type -> . primitive_type LBRACKET RBRACKET
    (133) subscript_access -> . IDENTIFIER LBRACKET expression RBRACKET

    $end            reduce using rule 1 (program -> statement_list .)
    KEYWORD_IF      shift and go to state 19
    KEYWORD_WHILE   shift and go to state 20
    KEYWORD_DO      shift and go to state 21
    KEYWORD_FOR     shift and go to state 22
    KEYWORD_SWITCH  shift and go to state 23
    KEYWORD_BREAK   shift and go to state 25
    KEYWORD_RETURN  shift and go to state 26
    LBRACE          shift and go to state 24
    IDENTIFIER      shift and go to state 17
    SYSTEM_INPUT    shift and go to state 31
    SYSTEM_OUTPUT   shift and go to state 32
    KEYWORD_EXIT    shift and go to state 33
    SYSTEM_SLEEP    shift and go to state 34
    SYSTEM_ARR_PUSH shift and go to state 35
    SYSTEM_ARR_POP  shift and go to state 36
    SYSTEM_ARR_SIZE shift and go to state 37
    SYSTEM_ARR_CONTAINS shift and go to state 38
    SYSTEM_ARR_INDEXOF shift and go to state 39
    SYSTEM_ARR_AVG  shift and go to state 40
    KEYWORD_INT     shift and go to state 41
    KEYWORD_FLOAT   shift and go to state 42
    KEYWORD_CHAR    shift and go to state 43
    KEYWORD_VOID    shift and go to state 44
    KEYWORD_STRING  shift and go to state 45
    KEYWORD_BOOL    shift and go to state 46
    KEYWORD_FILE    shift and go to state 47
    KEYWORD_SOCKET  shift and go to state 48
    KEYWORD_DICT    shift and go to state 49
    KEYWORD_REGEX   shift and go to state 50
    KEYWORD_ARRAY   shift and go to state 51

    statement                      shift and go to state 52
    declaration_statement          shift and go to state 4
    assignment_statement           shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    do_while_statement             shift and go to state 8
    for_statement                  shift and go to state 9
    switch_statement               shift and go to state 10
    break_statement                shift and go to state 11
    return_statement               shift and go to state 12
    function_call_statement        shift and go to state 13
    block_statement                shift and go to state 14
    function_definition            shift and go to state 15
    type_specifier                 shift and go to state 16
    left_hand_side                 shift and go to state 18
    function_call                  shift and go to state 27
    primitive_type                 shift and go to state 28
    array_type                     shift and go to state 29
    subscript_access               shift and go to state 30

state 3

    (8) statement_list -> statement .

    KEYWORD_IF      reduce using rule 8 (statement_list -> statement .)
    KEYWORD_WHILE   reduce using rule 8 (statement_list -> statement .)
    KEYWORD_DO      reduce using rule 8 (statement_list -> statement .)
    KEYWORD_FOR     reduce using rule 8 (statement_list -> statement .)
    KEYWORD_SWITCH  reduce using rule 8 (statement_list -> statement .)
    KEYWORD_BREAK   reduce using rule 8 (statement_list -> statement .)
    KEYWORD_RETURN  reduce using rule 8 (statement_list -> statement .)
    LBRACE          reduce using rule 8 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 8 (statement_list -> statement .)
    SYSTEM_INPUT    reduce using rule 8 (statement_list -> statement .)
    SYSTEM_OUTPUT   reduce using rule 8 (statement_list -> statement .)
    KEYWORD_EXIT    reduce using rule 8 (statement_list -> statement .)
    SYSTEM_SLEEP    reduce using rule 8 (statement_list -> statement .)
    SYSTEM_ARR_PUSH reduce using rule 8 (statement_list -> statement .)
    SYSTEM_ARR_POP  reduce using rule 8 (statement_list -> statement .)
    SYSTEM_ARR_SIZE reduce using rule 8 (statement_list -> statement .)
    SYSTEM_ARR_CONTAINS reduce using rule 8 (statement_list -> statement .)
    SYSTEM_ARR_INDEXOF reduce using rule 8 (statement_list -> statement .)
    SYSTEM_ARR_AVG  reduce using rule 8 (statement_list -> statement .)
    KEYWORD_INT     reduce using rule 8 (statement_list -> statement .)
    KEYWORD_FLOAT   reduce using rule 8 (statement_list -> statement .)
    KEYWORD_CHAR    reduce using rule 8 (statement_list -> statement .)
    KEYWORD_VOID    reduce using rule 8 (statement_list -> statement .)
    KEYWORD_STRING  reduce using rule 8 (statement_list -> statement .)
    KEYWORD_BOOL    reduce using rule 8 (statement_list -> statement .)
    KEYWORD_FILE    reduce using rule 8 (statement_list -> statement .)
    KEYWORD_SOCKET  reduce using rule 8 (statement_list -> statement .)
    KEYWORD_DICT    reduce using rule 8 (statement_list -> statement .)
    KEYWORD_REGEX   reduce using rule 8 (statement_list -> statement .)
    KEYWORD_ARRAY   reduce using rule 8 (statement_list -> statement .)
    $end            reduce using rule 8 (statement_list -> statement .)
    RBRACE          reduce using rule 8 (statement_list -> statement .)
    KEYWORD_CASE    reduce using rule 8 (statement_list -> statement .)
    KEYWORD_DEFAULT reduce using rule 8 (statement_list -> statement .)


state 4

    (10) statement -> declaration_statement .

    KEYWORD_IF      reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_WHILE   reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_DO      reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_FOR     reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_SWITCH  reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_BREAK   reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_RETURN  reduce using rule 10 (statement -> declaration_statement .)
    LBRACE          reduce using rule 10 (statement -> declaration_statement .)
    IDENTIFIER      reduce using rule 10 (statement -> declaration_statement .)
    SYSTEM_INPUT    reduce using rule 10 (statement -> declaration_statement .)
    SYSTEM_OUTPUT   reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_EXIT    reduce using rule 10 (statement -> declaration_statement .)
    SYSTEM_SLEEP    reduce using rule 10 (statement -> declaration_statement .)
    SYSTEM_ARR_PUSH reduce using rule 10 (statement -> declaration_statement .)
    SYSTEM_ARR_POP  reduce using rule 10 (statement -> declaration_statement .)
    SYSTEM_ARR_SIZE reduce using rule 10 (statement -> declaration_statement .)
    SYSTEM_ARR_CONTAINS reduce using rule 10 (statement -> declaration_statement .)
    SYSTEM_ARR_INDEXOF reduce using rule 10 (statement -> declaration_statement .)
    SYSTEM_ARR_AVG  reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_INT     reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_FLOAT   reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_CHAR    reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_VOID    reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_STRING  reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_BOOL    reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_FILE    reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_SOCKET  reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_DICT    reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_REGEX   reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_ARRAY   reduce using rule 10 (statement -> declaration_statement .)
    $end            reduce using rule 10 (statement -> declaration_statement .)
    RBRACE          reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_ELSE    reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_CASE    reduce using rule 10 (statement -> declaration_statement .)
    KEYWORD_DEFAULT reduce using rule 10 (statement -> declaration_statement .)


state 5

    (11) statement -> assignment_statement .
